A little CSS fix on mobile single event page

--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -88,7 +88,7 @@ a
 		height auto
 		overflow hidden
 		padding 10px
-		min-height 90px
+		min-height 110px
 		.name
 			text-align center
 			font-weight bold
